--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 
   <script>
     async function googleTranslate(text, target) {
-      const url = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&dt=t&tl=${encodeURIComponent(target)}&q=${encodeURIComponent(text)}`;
+      const url = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=en&dt=t&tl=${encodeURIComponent(target)}&q=${encodeURIComponent(text)}`;
       try {
         const r = await fetch(url);
         if (!r.ok) throw new Error('HTTP ' + r.status);
